<resources>
    <string name="app_name">PopularMovies2</string>
    <string name="title_movie_detail">Movie Detail</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Movie Details</string>
    <string name="action_sortby">Sorted by: Popularity</string>
    <string name="released">Released</string>
    <string name="overview">Overview</string>
    <string name="rating">Rating:</string>
    <string name="mark_as_favorite">Mark as favorite</string>
    <string name="not_marked_as_favorite">Add Favorite</string>
    <string name="marked_as_favorite">Remove Favorite</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
</resources>
